[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Themes/MenuTheme.tres" type="Theme" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )

[node name="CanvasLayer" type="CanvasLayer"]
layer = 0
script = ExtResource( 1 )

[node name="SettingsMenu" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Panel" type="Panel" parent="SettingsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="BackButton" type="Button" parent="SettingsMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -257.0
margin_top = 399.0
margin_right = 193.0
margin_bottom = 492.0
text = "Back"

[node name="MuteButton" type="Button" parent="SettingsMenu"]
margin_left = 728.0
margin_top = 476.0
margin_right = 1111.0
margin_bottom = 569.0
text = "Muted: Yes"

[node name="TutorialButton" type="Button" parent="SettingsMenu"]
margin_left = 678.0
margin_top = 590.0
margin_right = 1162.0
margin_bottom = 683.0
text = "Tutorial: Off"

[connection signal="pressed" from="SettingsMenu/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="SettingsMenu/MuteButton" to="." method="_on_MuteButton_pressed"]
[connection signal="ready" from="SettingsMenu/MuteButton" to="." method="_on_MuteButton_ready"]
[connection signal="pressed" from="SettingsMenu/TutorialButton" to="." method="_on_TutorialButton_pressed"]
[connection signal="ready" from="SettingsMenu/TutorialButton" to="." method="_on_TutorialButton_ready"]
